--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <!-- Default link -->
         <link rel="stylesheet" href="style.css">
         <!-- p5.js -->
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.11.1/p5.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/p5@1.11.3/lib/p5.min.js"></script>
         <title>TimelessTest</title>
     </head>
     <body>
