--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <title>TimelessTest</title>
     </head>
     <body>
-
+        <canvas id="Canvas1"></canvas>
         <script src="main.js"></script>
     </body>
 </html>
