making the canvas

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         <title>TimelessTest</title>
     </head>
     <body>
+        <canvas id="myCanvas"></canvas>
         <script src="main.js"></script>
     </body>
 </html>
